--- a/index.html
+++ b/index.html
@@ -7,6 +7,34 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/water.min.css">
 </head>
 <body>
-    <h1>Web de Jordi</h1>
+    <h1 style="text-align: center"><ins>¡Salve mundus, ego sum Jordi!</ins></h1>
+      <br><br>
+      <p>32 años de experiencia en el entorno Mainframe “OS/30 y Z/Series” IBM. Técnico de Sistemas, con residencia en Barcelona, España. Especializado en Soporte Técnico al cliente de Gestión de aplicaciones. </p>
+      <br>
+   <h2>1.     Experiencia laboral:</h2>
+      <h3>- Planificación y Servicio Técnico en procesos Batch - Mainframe Z/OS en AXA Seguros (2014 - 2022)</h3>
+        <p>Migración planificador IBM TWS a BMC Control-M.</p>
+        <p>Automatización Scripting Stonebranch UDM "File Transfer", en los JCLs del Sistema Z/OS.</p>
+        <p>Administración Editran-CICS para sistemas Z/OS.</p>
+    <h3>- Servicio técnico - Mainframe Z/OS en AXA Tech (2010 - 2013)</h3>
+        <p>Primer nivel de incidencia en CICS y MQ/Series.</p>
+    <h3>- Técnico de Sistemas Mainframe OS/390 y Administración Backups Sistemas Distribuidos en Winterthur seguros (1999 - 2009)</h3>
+        <p>Administración; S.O. OS/390, Storage, Backups Mainframe, Editran, traspasos Mantis,
+           transferencia ficheros Connect/Direct.</p>
+        <p>Administración Backups Distribuido; Veritas Netbackup, Harbor.</p>
+        <p>Gestión del Backup Recovery System del Mainframe y Distribuido.</p>
+    <h3>- Para más información ver en mi Perfil <a href="https://www.linkedin.com/in/jordi-pons-14328927b" target="_blank">Linkedin</a></h3>
+      <br>
+  <h2>2.     Proyectos:</h2>
+      <h3>- Migración planificador IBM TWS a BMC Control-M.</h3>
+        <p>Fusión de las planificiones Mainframe “TWS” y Distribuido “Stonebranch”, a un planificador común para ambos entornos “Control-M”.</p>
+      <h3>- Automatización Scripting Stonebranch UDM File Transfer en los JCLs del Sistema Z/OS.</h3>
+        <p>Se crea plantilla estandarizada en los JCLs para la transferencia de Ficheros, a partir de la cual se generan automáticamente los scripts UDM, según campos introducidos.</p>
+      <br>
+   <h2>3.     Sobre mí :</h2>
+        <p>Soy Jordi Pons, Técnico informático de Formación Profesional segundo grado. Mi perfil se ha generalizado en la resolución de problemas técnicos en los desarrollos de mis clientes.</p>
+        <p>He trabajado en empresas del entorno del Seguro; Winterthur y AXA.</p>
+        <p>Actualmente me estoy formando en el mundo distribuido “frontend y backend”; Github, HTML, CSS, JS, Python, Django, etc.
+    <h3>- Para más información ver en mis <a href="https://github.com/jponsgar" target="_blank">Proyectos GitHub</a>”</h3>
 </body>
 </html>
