--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
            transferencia ficheros Connect/Direct.</p>
         <p>Administración Backups Distribuido; Veritas Netbackup, Harbor.</p>
         <p>Gestión del Backup Recovery System del Mainframe y Distribuido.</p>
-    <h3>- Para más información ver en mi Perfil <a href="https://www.linkedin.com/in/jordi-pons-14328927b" target="_blank">Linkedin</a></h3>
+    <h3>- Para más información ver mi Perfil <a href="https://www.linkedin.com/in/jordi-pons-14328927b" target="_blank">Linkedin</a></h3>
       <br>
   <h2>2.     Proyectos:</h2>
       <h3>- Migración planificador IBM TWS a BMC Control-M.</h3>
