--- a/index.html
+++ b/index.html
@@ -35,6 +35,6 @@
         <p>Soy Jordi Pons, Técnico informático de Formación Profesional segundo grado. Mi perfil se ha generalizado en la resolución de problemas técnicos en los desarrollos de mis clientes.</p>
         <p>He trabajado en empresas del entorno del Seguro; Winterthur y AXA.</p>
         <p>Actualmente me estoy formando en el mundo distribuido “frontend y backend”; Github, HTML, CSS, JS, Python, Django, etc.
-    <h3>- Para más información ver <a href="https://github.com/jponsgar" target="_blank">Proyectos GitHub</a>”</h3>
+    <h3>- Para más información ver <a href="https://github.com/jponsgar" target="_blank">Proyectos GitHub</a></h3>
 </body>
 </html>
