--- a/index.html
+++ b/index.html
@@ -36,5 +36,7 @@
         <p>He trabajado en empresas del entorno del Seguro; Winterthur y AXA.</p>
         <p> Título [IFCT0609] PROGRAMACIÓN DE SISTEMAS INFORMÁTICOS, del mundo distribuido “frontend y backend”; Github, HTML, CSS, JS, Python, Django, etc.
     <h3>- Para más información ver <a href="https://github.com/jponsgar" target="_blank">Proyectos GitHub</a></h3>
+        <br>
+    <h3>- Y con ganas de ampliar conocimentos en los ámbitos más dispares del mundo profesional......</h3>
 </body>
 </html>
